# indexical-sdk-py

./: .gitignore  LICENSE  README.md  pyproject.toml
src/indexical_sdk/: __init__.py
