[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "indexical_sdk"
version = "0.0.1"
authors = [{ name = "Vishnu Menon", email = "me@vishnumenon.com" }]
description = "Indexical SDK (for Python)"
readme = "README.md"
requires-python = ">=3.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["packaging"]

[project.urls]
Homepage = "https://github.com/indexical/indexical-sdk-py"
Issues = "https://github.com/indexical/indexical-sdk-py/issues"
